# folax_deepwiki

./: .gitignore  .readthedocs.yaml  pyproject.toml
.github/workflows/: CI.yml
docs/: 3D_thermo_mechanics_example.ipynb  conf.py  index.rst  installation.rst  quick_start.ipynb
docs/api_reference/: fol.controls.rst  fol.deep_neural_networks.rst  fol.loss_functions.rst  fol.mesh_input_output.rst  fol.responses.rst  fol.solvers.rst  index.rst
examples/: GALLERY_HEADER.md
fol/controls/: control.py  dirichlet_control.py  fourier_control.py  identity_control.py  voronoi_control2D.py  voronoi_control3D.py
fol/deep_neural_networks/: deep_network.py  deep_o_net_parametric_operator_learning.py  explicit_parametric_operator_learning.py  fourier_parametric_operator_learning.py  implicit_parametric_operator_learning.py  meta_alpha_meta_implicit_parametric_operator_learning.py  meta_implicit_parametric_operator_learning.py  nns.py
fol/loss_functions/: fe_kinematics.py  fe_loss.py  kratos_small_displacement.py  mechanical.py  mechanical_elastoplasticity.py  mechanical_neohooke.py  mechanical_saint_venant.py  mechanical_saint_venant_AD.py  phase_field.py  regression_loss.py  thermal.py  thermo_mechanics.py  transient_thermal.py
fol/mesh_input_output/: mesh.py
fol/responses/: fe_response.py
fol/solvers/: adjoint_fe_solver.py  fe_linear_residual_based_solver.py  fe_nonlinear_residual_based_solver.py  fe_nonlinear_residual_based_solver_with_history_update.py  fe_solver.py  solver.py
notebooks/: pi_fno_2D_elasticity_demo.ipynb  pi_fno_3D_thermomech_demo.ipynb
(+14 files in other folders)
